--- a/app/src/main/res/layout/cardview_picture.xml
+++ b/app/src/main/res/layout/cardview_picture.xml
@@ -69,7 +69,14 @@
                 <CheckBox
                     android:id="@+id/likeCheck_card"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/checkbox_selector"/>
+                <TextView
+                    android:id="@+id/likeNumberCard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/likeNumber_card"
+                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>
 
             </LinearLayout>
 
