Vamos que se puede

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_button_login"
-                android:theme="@style/RaisedButtonDark" />
+                android:theme="@style/RaisedButtonDark"
+                android:onClick="GoContainerActivity"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
