Vamos que se puede

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,9 @@
         android:paddingRight="@dimen/padding_horizontal_login"
         android:paddingTop="@dimen/activty_vertical_margin"
         >
+        <include layout="@layout/cardview_picture"></include>
+
+        <include layout="@layout/cardview_picture"></include>
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
