Vamos que se puede

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,9 +19,16 @@
         android:paddingRight="@dimen/padding_horizontal_login"
         android:paddingTop="@dimen/activty_vertical_margin"
         >
-        <include layout="@layout/cardview_picture"></include>
 
-        <include layout="@layout/cardview_picture"></include>
+        <android.support.v7.widget.RecyclerView
+          android:id="@+id/pictureRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+
+        />
+
+
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
