Vamos que se puede

--- a/app/src/main/res/layout/cardview_picture.xml
+++ b/app/src/main/res/layout/cardview_picture.xml
@@ -26,7 +26,7 @@
             android:background="@color/backGround_text_Card"
             android:orientation="vertical"
             android:paddingLeft="@dimen/activty_vertical_margin"
-            android:paddingBottom="@dimen/activty_vertical_margin">
+            android:layout_marginBottom="@dimen/activty_vertical_margin">
 
             <TextView
                 android:id="@+id/username_card"
